tests/baselines/reference/symbolDeclarationEmit12.errors.txt
tests/cases/conformance/es6/Symbols/symbolDeclarationEmit12.ts(4,28): error TS4028: Type of property '[Symbol.iterator]' references inaccessible name 'I'.
tests/cases/conformance/es6/Symbols/symbolDeclarationEmit12.ts(5,9): error TS2300: Duplicate identifier '[Symbol.toPrimitive]'.
tests/cases/conformance/es6/Symbols/symbolDeclarationEmit12.ts(5,33): error TS4030: Type of parameter 'x' references inaccessible name 'I'.
tests/cases/conformance/es6/Symbols/symbolDeclarationEmit12.ts(6,40): error TS4038: Return type of method '[Symbol.isConcatSpreadable]' references inaccessible name 'I'.
tests/cases/conformance/es6/Symbols/symbolDeclarationEmit12.ts(9,13): error TS2300: Duplicate identifier '[Symbol.toPrimitive]'.
tests/cases/conformance/es6/Symbols/symbolDeclarationEmit12.ts(10,13): error TS2300: Duplicate identifier '[Symbol.toPrimitive]'.
tests/cases/conformance/es6/Symbols/symbolDeclarationEmit12.ts(10,37): error TS4030: Type of parameter 'x' references inaccessible name 'I'.


==== tests/cases/conformance/es6/Symbols/symbolDeclarationEmit12.ts (7 errors) ====
    module M {
        interface I { }
        export class C {
            [Symbol.iterator]: I;
                               ~
!!! error TS4028: Type of property '[Symbol.iterator]' references inaccessible name 'I'.
            [Symbol.toPrimitive](x: I) { }
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier '[Symbol.toPrimitive]'.
                                    ~
!!! error TS4030: Type of parameter 'x' references inaccessible name 'I'.
            [Symbol.isConcatSpreadable](): I {
                                           ~
!!! error TS4038: Return type of method '[Symbol.isConcatSpreadable]' references inaccessible name 'I'.
                return undefined
            }
            get [Symbol.toPrimitive]() { return undefined; }
                ~~~~~~~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier '[Symbol.toPrimitive]'.
            set [Symbol.toPrimitive](x: I) { }
                ~~~~~~~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier '[Symbol.toPrimitive]'.
                                        ~
!!! error TS4030: Type of parameter 'x' references inaccessible name 'I'.
        }
    }